--- a/index.html
+++ b/index.html
@@ -42,37 +42,49 @@
         </figure>
       </section>
 
-      <section id="conocimientosID">
-        <h1>Mis conocimientos</h1>
-        <p>
+      <section class="section-conocimientos" >
+        
+        <div class="header-section">
+          <h2 id="conocimientosID">Mis conocimientos</h2>
+          <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe
           provident quas nostrum, veniam delectus nesciunt iusto maxime corporis
           culpa vero laudantium non reprehenderit fugiat quidem a necessitatibus
           libero repellat dolorum.
-        </p>
-
-        <div>
-          <i class="devicon-html5-plain colored"></i>
-          <span>HTML 5</span>
-
-          <i class="devicon-css3-plain colored"></i>
-          <span> CSS 3</span>
-
-          <i class="devicon-sass-original colored"></i>
-          <span>Sass</span>
-
-          <i class="devicon-javascript-plain colored"></i>
-          <span>JavasScript</span>
-
-          <i class="devicon-react-original colored"></i>
-          <span>React</span>
-
-          <i class="devicon-git-plain colored"></i>
-          <span>GIT</span>
+          </p>
         </div>
+        <div class="iconos">
+          <div class="icono">
+            <i class="devicon-html5-plain colored"></i>
+            <p>HTML 5</p>
+          </div>
+          <div class="icono">
+            <i class="devicon-css3-plain colored"></i>
+            <p> CSS 3</p>
+         </div>
+
+          <div class="icono">
+            <i class="devicon-sass-original colored"></i>
+            <p>Sass</p>
+          </div>
+
+          <div class="icono">
+            <i class="devicon-javascript-plain colored"></i>
+            <p>JavasScript</p>
+          </div>
+
+          <div class="icono">
+            <i class="devicon-react-original colored"></i>
+            <p>React</p>
+          </div>
+
+          <div class="icono">
+            <i class="devicon-git-plain colored"></i>
+            <p>GIT</p>
+          </div>
       </section>
 
-      <section>
+      <section class="frase">
         <i class="fa-solid fa-quote-right"></i>
         <blockquote>
           <p>
@@ -85,14 +97,16 @@
         <cite>Someone</cite>
       </section>
 
-      <section class="section-proyect" id="proyectosID">
-        <h1>Mis proyectos</h1>
-        <p>
+      <section class="section-proyect" >
+        <div class="header-section">
+          <h2 id="proyectosID">Mis proyectos</h2>
+          <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iste
           dignissimos voluptates deleniti. Velit eligendi animi tempora
           reprehenderit quidem qui veritatis in dicta. Non unde voluptates hic,
-          fugit vitae nostrum.
-        </p>
+          fugit vitae nostrum
+          </p>
+        </div>
         <div class="proyectos">
           <figure>
             <img src="Imágenes/portfolio.svg" alt="mi portfolio" />
