--- a/index.html
+++ b/index.html
@@ -35,22 +35,21 @@
           <h2>¡Hola! Soy</h2>
           <h1>Natalia Saidman</h1>
           <p>Desarrolladora, Lic. en Nutrición y fan de los juegos de mesa</p>
-          <a href="#proyectos" class="boton">LO QUE HAGO</a>
+          <a href="#proyectosID" class="boton">LO QUE HAGO</a>
         </div>
         <figure>
           <img src="Imágenes/software-engineer.svg" alt="mujer programando" />
         </figure>
       </section>
 
-      <section class="section-conocimientos" >
-        
+      <section class="section-conocimientos">
         <div class="header-section">
           <h2 id="conocimientosID">Mis conocimientos</h2>
           <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe
-          provident quas nostrum, veniam delectus nesciunt iusto maxime corporis
-          culpa vero laudantium non reprehenderit fugiat quidem a necessitatibus
-          libero repellat dolorum.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe
+            provident quas nostrum, veniam delectus nesciunt iusto maxime
+            corporis culpa vero laudantium non reprehenderit fugiat quidem a
+            necessitatibus libero repellat dolorum.
           </p>
         </div>
         <div class="iconos">
@@ -60,28 +59,25 @@
           </div>
           <div class="icono">
             <i class="devicon-css3-plain colored"></i>
-            <p> CSS 3</p>
-         </div>
-
+            <p>CSS 3</p>
+          </div>
           <div class="icono">
             <i class="devicon-sass-original colored"></i>
             <p>Sass</p>
           </div>
-
           <div class="icono">
             <i class="devicon-javascript-plain colored"></i>
             <p>JavasScript</p>
           </div>
-
           <div class="icono">
             <i class="devicon-react-original colored"></i>
             <p>React</p>
           </div>
-
           <div class="icono">
             <i class="devicon-git-plain colored"></i>
             <p>GIT</p>
           </div>
+        </div>
       </section>
 
       <section class="frase">
@@ -97,14 +93,14 @@
         <cite>Someone</cite>
       </section>
 
-      <section class="section-proyect" >
+      <section class="section-proyect">
         <div class="header-section">
           <h2 id="proyectosID">Mis proyectos</h2>
           <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iste
-          dignissimos voluptates deleniti. Velit eligendi animi tempora
-          reprehenderit quidem qui veritatis in dicta. Non unde voluptates hic,
-          fugit vitae nostrum
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iste
+            dignissimos voluptates deleniti. Velit eligendi animi tempora
+            reprehenderit quidem qui veritatis in dicta. Non unde voluptates
+            hic, fugit vitae nostrum
           </p>
         </div>
         <div class="proyectos">
@@ -144,6 +140,7 @@
           </figure>
         </div>
       </section>
+
       <section id="contactoID">
         <div class="contacto">
           <div class="contacto-título">
@@ -155,11 +152,29 @@
               fugit velit fugiat debitis culpa.
             </p>
           </div>
-            <ul class="redes-sociales">
-              <li><i class="fa-brands fa-twitter"></i> <a href="https://twitter.com/saidman_natalia">@saidman_natalia</a></li>
-              <li><i class="fa-brands fa-github-alt"></i> <a href="https://github.com/NataliaSaidman">NataliaSaidman</a></li>
-              <li><i class="fa-brands fa-linkedin-in"></i><a href="https://www.linkedin.com/in/natalia-saidman-29879a242/">Natalia Saidman</a></li>
-              <li><i class="fa-solid fa-envelope"></i><a href="www.gmail.com">licnataliasaidman@gmail.com</a></li>
+          <div class="redes-sociales">
+            <ul>
+              <li>
+                <i class="fa-brands fa-twitter"></i>
+                <a href="https://twitter.com/saidman_natalia"
+                  >@saidman_natalia</a
+                >
+              </li>
+              <li>
+                <i class="fa-brands fa-github-alt"></i>
+                <a href="https://github.com/NataliaSaidman">NataliaSaidman</a>
+              </li>
+              <li>
+                <i class="fa-brands fa-linkedin-in"></i
+                ><a
+                  href="https://www.linkedin.com/in/natalia-saidman-29879a242/"
+                  >Natalia Saidman</a
+                >
+              </li>
+              <li>
+                <i class="fa-solid fa-envelope"></i
+                ><a href="www.gmail.com">licnataliasaidman@gmail.com</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -175,26 +190,40 @@
         </div>
       </section>
     </main>
-  <footer>
-    <div>
-      <nav>
+    <footer>
+      <div class="lista-interna">
+        <nav>
+          <ul>
+            <li><a href="#holaID">HOLA</a></li>
+            <li><a href="#conocimientosID">CONOCIMIENTOS</a></li>
+            <li><a href="#proyectosID">PROYECTOS</a></li>
+            <li><a href="#contactoID">CONTACTO</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="lista-externa">
         <ul>
-          <li><a href="#holaID">HOLA</a></li>
-          <li><a href="#conocimientosID">CONOCIMIENTOS</a></li>
-          <li><a href="#proyectosID">PROYECTOS</a></li>
-          <li><a href="#contactoID">CONTACTO</a></li>
+          <li>
+            <a href="https://twitter.com/saidman_natalia"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://github.com/NataliaSaidman"
+              ><i class="fa-brands fa-github-alt"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/natalia-saidman-29879a242/"
+              ><i class="fa-brands fa-linkedin-in"></i
+            ></a>
+          </li>
+          <li>
+            <a href="www.gmail.com"><i class="fa-solid fa-envelope"></i></a>
+          </li>
         </ul>
-      </nav>
-    </div>
-    <div>
-      <ul>
-        <li><i class="fa-brands fa-twitter"></i> <a href="https://twitter.com/saidman_natalia"></a></li>
-        <li><i class="fa-brands fa-github-alt"></i> <a href="https://github.com/NataliaSaidman"></a></li>
-        <li><i class="fa-brands fa-linkedin-in"></i><a href="https://www.linkedin.com/in/natalia-saidman-29879a242/"></a></li>
-        <li><i class="fa-solid fa-envelope"></i><a href="www.gmail.com"></a></li>
-      </ul>
-    </div>
-      <p>Hecho con &#128154 por Natalia Saidman </p>
+      </div>
+      <p>Hecho con &#128154; por Natalia Saidman</p>
     </footer>
   </body>
 </html>
