--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="#holaID">HOLA</a></li>
           <li><a href="#conocimientosID">CONOCIMIENTOS</a></li>
           <li><a href="#proyectosID">PROYECTOS</a></li>
-          <li><a href="#contactoID" id="contacto">CONTACTO</a></li>
+          <li><a href="#contactoID" id="contact">CONTACTO</a></li>
         </ul>
       </nav>
     </header>
@@ -35,75 +35,75 @@
           <h2>¡Hola! Soy</h2>
           <h1>Natalia Saidman</h1>
           <p>Desarrolladora, Lic. en Nutrición y fan de los juegos de mesa</p>
-          <a href="#proyectosID" class="boton">LO QUE HAGO</a>
+          <a href="#proyectosID" class="button">LO QUE HAGO</a>
         </div>
         <figure>
           <img src="Imágenes/software-engineer.svg" alt="mujer programando" />
         </figure>
       </section>
 
-      <section class="section-conocimientos">
+      <section class="section-knowledge">
         <div class="header-section">
           <h2 id="conocimientosID">Mis conocimientos</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe
-            provident quas nostrum, veniam delectus nesciunt iusto maxime
-            corporis culpa vero laudantium non reprehenderit fugiat quidem a
-            necessitatibus libero repellat dolorum.
+            Lo que más me gusta de la programación es dar soluciones a los
+            problemas que se puedan presentar. Mis habilidades Hard en
+            programación son las siguientes.
           </p>
         </div>
-        <div class="iconos">
-          <div class="icono">
+        <div class="icons">
+          <div class="icon">
             <i class="devicon-html5-plain colored"></i>
             <p>HTML 5</p>
           </div>
-          <div class="icono">
+          <div class="icon">
             <i class="devicon-css3-plain colored"></i>
             <p>CSS 3</p>
           </div>
-          <div class="icono">
+          <div class="icon">
             <i class="devicon-sass-original colored"></i>
             <p>Sass</p>
           </div>
-          <div class="icono">
+          <div class="icon">
             <i class="devicon-javascript-plain colored"></i>
             <p>JavasScript</p>
           </div>
-          <div class="icono">
+          <div class="icon">
             <i class="devicon-react-original colored"></i>
             <p>React</p>
           </div>
-          <div class="icono">
+          <div class="icon">
             <i class="devicon-git-plain colored"></i>
             <p>GIT</p>
           </div>
         </div>
       </section>
 
-      <section class="frase">
+      <section class="phrase">
         <i class="fa-solid fa-quote-right"></i>
         <blockquote>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut deleniti
-            quos quisquam nam quidem vitae excepturi officia ea provident qui
-            repudiandae autem iste recusandae, aliquam consequatur repellat
-            velit atque saepe!
+            Cambia lo superficial, cambia también lo profundo, cambia el modo de
+            pensar, cambia todo en este mundo. (...)
+            <br />
+            Cambia el rumbo el caminante, aunque esto le cause daño, y así como
+            todo cambia que yo cambie no es extraño...
           </p>
         </blockquote>
-        <cite>Someone</cite>
+        <cite>"Todo Cambia"</cite>
+        <cite>Mercedes Sosa</cite>
       </section>
 
-      <section class="section-proyect">
+      <section class="section-project">
         <div class="header-section">
           <h2 id="proyectosID">Mis proyectos</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iste
-            dignissimos voluptates deleniti. Velit eligendi animi tempora
-            reprehenderit quidem qui veritatis in dicta. Non unde voluptates
-            hic, fugit vitae nostrum
+            El desarrollo web se logra con dedicación individual y trabajo en
+            equipo. Cada uno de mis proyectos lo realicé con mucho compromiso,
+            responsabilidad y en forma colaborativa.
           </p>
         </div>
-        <div class="proyectos">
+        <div class="projects">
           <figure>
             <img src="Imágenes/portfolio.svg" alt="mi portfolio" />
             <figcaption>Portfolio</figcaption>
@@ -142,8 +142,8 @@
       </section>
 
       <section id="contactoID">
-        <div class="contacto">
-          <div class="contacto-título">
+        <div class="contact">
+          <div class="contact-title">
             <h1>Contactame</h1>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus a,
@@ -152,7 +152,7 @@
               fugit velit fugiat debitis culpa.
             </p>
           </div>
-          <div class="redes-sociales">
+          <div class="social-networks">
             <ul>
               <li>
                 <i class="fa-brands fa-twitter"></i>
@@ -178,7 +178,7 @@
             </ul>
           </div>
         </div>
-        <div class="escribime">
+        <div class="write-me">
           <h1>Escribime</h1>
           <ul>
             <li>Nombre *</li>
@@ -191,7 +191,7 @@
       </section>
     </main>
     <footer>
-      <div class="lista-interna">
+      <div class="internal-list">
         <nav>
           <ul>
             <li><a href="#holaID">HOLA</a></li>
@@ -201,7 +201,7 @@
           </ul>
         </nav>
       </div>
-      <div class="lista-externa">
+      <div class="external-list">
         <ul>
           <li>
             <a href="https://twitter.com/saidman_natalia"
