--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a href="#proyectosID" class="button">LO QUE HAGO</a>
         </div>
         <figure>
-          <img src="Imágenes/software-engineer.svg" alt="mujer programando" />
+          <img src="Imágenes/undraw_programmer_re_owql.svg" alt="mujer programando" />
         </figure>
       </section>
 
@@ -173,7 +173,7 @@
               </li>
               <li>
                 <i class="fa-solid fa-envelope"></i
-                ><a href="www.gmail.com">licnataliasaidman@gmail.com</a>
+                ><a href="mailto:licnataliasaidman@gmail.com">licnataliasaidman@gmail.com</a>
               </li>
             </ul>
           </div>
@@ -219,7 +219,7 @@
             ></a>
           </li>
           <li>
-            <a href="www.gmail.com"><i class="fa-solid fa-envelope"></i></a>
+            <a href="mailto:licnataliasaidman@gmail.com"><i class="fa-solid fa-envelope"></i></a>
           </li>
         </ul>
       </div>
