--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
       </nav>
     </header>
     <main>
-      <section class="section-one" id="holaID">
-        <div class="presentacion">
+      <section class="hero" id="holaID">
+        <div class="presentation">
           <h2>¡Hola! Soy</h2>
           <h1>Natalia Saidman</h1>
           <p>Desarrolladora, Lic. en Nutrición y fan de los juegos de mesa</p>
           <a href="#proyectosID" class="button">LO QUE HAGO</a>
         </div>
         <figure>
-          <img src="Imágenes/undraw_programmer_re_owql.svg" alt="mujer programando" />
+          <img src="Imágenes/hero.jpeg" alt="mujer programando" />
         </figure>
       </section>
 
-      <section class="section-knowledge">
-        <div class="header-section">
-          <h2 id="conocimientosID">Mis conocimientos</h2>
+      <section class="section-knowledge" id="conocimientosID">
+        <div class="header-knowledge">
+          <h2>Mis conocimientos</h2>
           <p>
             Lo que más me gusta de la programación es dar soluciones a los
             problemas que se puedan presentar. Mis habilidades Hard en
             programación son las siguientes.
           </p>
         </div>
-        <div class="icons">
+        <div class="knowledge">
           <div class="icon">
             <i class="devicon-html5-plain colored"></i>
             <p>HTML 5</p>
@@ -79,24 +79,22 @@
         </div>
       </section>
 
-      <section class="phrase">
-        <i class="fa-solid fa-quote-right"></i>
-        <blockquote>
+      <section class="gif">
+        <div class="cite">
           <p>
-            Cambia lo superficial, cambia también lo profundo, cambia el modo de
-            pensar, cambia todo en este mundo. (...)
-            <br />
-            Cambia el rumbo el caminante, aunque esto le cause daño, y así como
-            todo cambia que yo cambie no es extraño...
+            "He aprendido a arriesgarme a hacer cosas nuevas. El crecimiento y
+            la comodidad no pueden coexistir"
           </p>
-        </blockquote>
-        <cite>"Todo Cambia"</cite>
-        <cite>Mercedes Sosa</cite>
+          <cite>Virginia Rometti</cite>
+        </div>
+        <div class="container">
+          <img src="image_processing20200119-22208-1tbdbxc.gif" />
+        </div>
       </section>
 
-      <section class="section-project">
-        <div class="header-section">
-          <h2 id="proyectosID">Mis proyectos</h2>
+      <section class="section-project" id="proyectosID">
+        <div class="header-project">
+          <h2>Mis proyectos</h2>
           <p>
             El desarrollo web se logra con dedicación individual y trabajo en
             equipo. Cada uno de mis proyectos lo realicé con mucho compromiso,
@@ -105,88 +103,121 @@
         </div>
         <div class="projects">
           <figure>
-            <img src="Imágenes/portfolio.svg" alt="mi portfolio" />
+            <img
+              src="Imágenes/imagenes verdes/programadora.svg"
+              alt="mujer programando"
+            />
             <figcaption>Portfolio</figcaption>
           </figure>
           <figure>
-            <img
-              src="Imágenes/generador de memesx.svg"
-              alt="mujer concelular"
-            />
+            <img src="Imágenes/imagenes verdes/memes.svg" alt="mujeres memes" />
             <figcaption>Generador de memes</figcaption>
           </figure>
           <figure>
-            <img src="Imágenes/match3.svg" alt="mujer con consola" />
+            <img src="Imágenes/imagenes verdes/match3.svg" alt="games" />
             <figcaption>Match 3</figcaption>
           </figure>
           <figure>
             <img
-              src="Imágenes/controlador de gastos.svg"
-              alt="mujer con celular revisando gastos"
+              src="Imágenes/imagenes verdes/controlador de gastos.svg"
+              alt="mujer estadisticas"
             />
             <figcaption>Controlador de gastos</figcaption>
           </figure>
           <figure>
-            <img src="Imágenes/administradordereuniones.svg" alt="clanedario" />
+            <img
+              src="Imágenes/imagenes verdes/administradora de reuniones.svg"
+              alt="mujer con reloj"
+            />
             <figcaption>Administrador de reuniones</figcaption>
           </figure>
           <figure>
-            <img src="Imágenes/todoapp.svg" alt="mujerconcelular" />
+            <img src="Imágenes/imagenes verdes/appsvg.svg" alt="celular app" />
             <figcaption>Todo app</figcaption>
           </figure>
           <figure id="movie">
-            <img src="Imágenes/movie.svg" alt="mujeres en un sillón" />
+            <img
+              src="Imágenes/imagenes verdes/movie.svg"
+              alt="noche de peliculas"
+            />
             <figcaption>Buscador de películas</figcaption>
           </figure>
         </div>
       </section>
 
-      <section id="contactoID">
-        <div class="contact">
-          <div class="contact-title">
-            <h1>Contactame</h1>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus a,
-              distinctio perferendis consequuntur quaerat fugit. Temporibus cum
-              laudantium voluptatum! Non dolore molestias nobis eos repellat
-              fugit velit fugiat debitis culpa.
-            </p>
+      <section class="section-contact" id="contactoID">
+        <div class="box-contact">
+          <div class="contact">
+            <div class="contact-title">
+              <h2>Contactame</h2>
+              <p>
+                Para conocerme más y ponerte en contacto conmigo te comparto mis
+                redes sociales.
+              </p>
+            </div>
+            <div class="social-networks">
+              <ul>
+                <li>
+                  <i class="fa-brands fa-twitter"></i>
+                  <a href="https://twitter.com/saidman_natalia"
+                    >@saidman_natalia</a
+                  >
+                </li>
+                <li>
+                  <i class="fa-brands fa-github-alt"></i>
+                  <a href="https://github.com/NataliaSaidman">NataliaSaidman</a>
+                </li>
+                <li>
+                  <i class="fa-brands fa-linkedin-in"></i
+                  ><a
+                    href="https://www.linkedin.com/in/natalia-saidman-29879a242/"
+                    >Natalia Saidman</a
+                  >
+                </li>
+                <li>
+                  <i class="fa-solid fa-envelope"></i
+                  ><a href="mailto:licnataliasaidman@gmail.com"
+                    >licnataliasaidman@gmail.com</a
+                  >
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="social-networks">
-            <ul>
-              <li>
-                <i class="fa-brands fa-twitter"></i>
-                <a href="https://twitter.com/saidman_natalia"
-                  >@saidman_natalia</a
-                >
-              </li>
-              <li>
-                <i class="fa-brands fa-github-alt"></i>
-                <a href="https://github.com/NataliaSaidman">NataliaSaidman</a>
-              </li>
-              <li>
-                <i class="fa-brands fa-linkedin-in"></i
-                ><a
-                  href="https://www.linkedin.com/in/natalia-saidman-29879a242/"
-                  >Natalia Saidman</a
-                >
-              </li>
-              <li>
-                <i class="fa-solid fa-envelope"></i
-                ><a href="mailto:licnataliasaidman@gmail.com">licnataliasaidman@gmail.com</a>
-              </li>
-            </ul>
+          <div class="contact">
+            <h2>Escribime</h2>
+            <form action="" method="GET">
+              <div class="name">
+              <div>
+                <p>
+                Nombre<span>*</span></p>
+                <input type="text" name="nombre" placeholder="p. ej.: Natalia" />
+              </div>
+              <div>
+              <p>
+                Apellido <span>*</span></p>
+                <input type="text" name="apellido" placeholder="p. ej.: Saidman" />
+              <p>
+              </div>
+              </div>
+                <p>Email <span>*</span></p>
+                <input     
+                  type="text"
+                  name="email"
+                  id="email"
+                  placeholder="p. ej.: licnataliasaidman@gmail.com"
+                />
+              
+              <p> Mensaje <span>*</span></p>
+                <textarea
+                  cols="50"
+                  rows="10"
+                  placeholder="Escriba mensaje aquí"
+                ></textarea>
+                <p>
+                  <input type="submit" value="Enviar" />
+                </p>
+            </form>
           </div>
-        </div>
-        <div class="write-me">
-          <h1>Escribime</h1>
-          <ul>
-            <li>Nombre *</li>
-            <li>Apellido *</li>
-            <li>Email *</li>
-            <li>Mensaje*</li>
-          </ul>
-          <button>Enviar</button>
         </div>
       </section>
     </main>
@@ -204,22 +235,32 @@
       <div class="external-list">
         <ul>
           <li>
-            <a href="https://twitter.com/saidman_natalia"
-              ><i class="fa-brands fa-twitter"></i
-            ></a>
+            <div class="link-red">
+              <a href="https://twitter.com/saidman_natalia"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+            </div>
           </li>
           <li>
-            <a href="https://github.com/NataliaSaidman"
-              ><i class="fa-brands fa-github-alt"></i
-            ></a>
+            <div class="link-red">
+              <a href="https://github.com/NataliaSaidman"
+                ><i class="fa-brands fa-github-alt"></i
+              ></a>
+            </div>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/natalia-saidman-29879a242/"
-              ><i class="fa-brands fa-linkedin-in"></i
-            ></a>
+            <div class="link-red">
+              <a href="https://www.linkedin.com/in/natalia-saidman-29879a242/"
+                ><i class="fa-brands fa-linkedin-in"></i
+              ></a>
+            </div>
           </li>
           <li>
-            <a href="mailto:licnataliasaidman@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+            <div class="link-red">
+              <a href="mailto:licnataliasaidman@gmail.com"
+                ><i class="fa-solid fa-envelope"></i
+              ></a>
+            </div>
           </li>
         </ul>
       </div>
