--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
             "He aprendido a arriesgarme a hacer cosas nuevas. El crecimiento y
             la comodidad no pueden coexistir"
           </p>
+          <br>
           <cite>Virginia Rometti</cite>
         </div>
         <div class="container">
           <img
-            src="image_processing20200119-22208-1tbdbxc.gif"
-            alt="programadora"
+            src="Imágenes/image_processing20200119-22208-1tbdbxc.gif"
+            alt="mujer con computadora"
           />
         </div>
       </section>
