portfolio-muy-avanzado

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             "He aprendido a arriesgarme a hacer cosas nuevas. El crecimiento y
             la comodidad no pueden coexistir"
           </p>
-          <br>
+          <br />
           <cite>Virginia Rometti</cite>
         </div>
         <div class="container">
@@ -106,46 +106,46 @@
           </p>
         </div>
         <div class="projects">
-          <figure>
-            <img
-              src="Imágenes/imagenes verdes/programadora.svg"
-              alt="mujer programando"
-            />
-            <figcaption>Portfolio</figcaption>
-          </figure>
-          <figure>
+          <a href="#">
+              <img
+                src="Imágenes/imagenes verdes/programadora.svg"
+                alt="mujer programando"
+              />
+              <figcaption>Portfolio</figcaption>
+          </a>
+          <a href="#">
             <img src="Imágenes/imagenes verdes/memes.svg" alt="mujeres memes" />
             <figcaption>Generador de memes</figcaption>
-          </figure>
-          <figure>
+          </a>
+          <a href="#">
             <img src="Imágenes/imagenes verdes/match3.svg" alt="games" />
             <figcaption>Match 3</figcaption>
-          </figure>
-          <figure>
+          </a>
+          <a href="#">
             <img
               src="Imágenes/imagenes verdes/controlador de gastos.svg"
               alt="mujer estadisticas"
             />
             <figcaption>Controlador de gastos</figcaption>
-          </figure>
-          <figure>
+          </a>
+          <a href="#">
             <img
               src="Imágenes/imagenes verdes/administradora de reuniones.svg"
               alt="mujer con reloj"
             />
             <figcaption>Administrador de reuniones</figcaption>
-          </figure>
-          <figure>
+          </a>
+          <a href="#">
             <img src="Imágenes/imagenes verdes/appsvg.svg" alt="celular app" />
             <figcaption>Todo app</figcaption>
-          </figure>
-          <figure id="movie">
+          </a>
+          <a href="#" id="movie">
             <img
               src="Imágenes/imagenes verdes/movie.svg"
               alt="noche de peliculas"
             />
             <figcaption>Buscador de películas</figcaption>
-          </figure>
+          </a>
         </div>
       </section>
 
@@ -163,12 +163,17 @@
               <ul>
                 <div>
                   <li>
-                    <a href="https://twitter.com/saidman_natalia" class="social-link">
+                    <a
+                      href="https://twitter.com/saidman_natalia"
+                      class="social-link"
+                    >
                       <i class="fa-brands fa-twitter"></i>@saidman_natalia</a
                     >
                   </li>
                   <li>
-                    <a href="https://github.com/NataliaSaidman" class="social-link"
+                    <a
+                      href="https://github.com/NataliaSaidman"
+                      class="social-link"
                       ><i class="fa-brands fa-github-alt"></i>NataliaSaidman</a
                     >
                   </li>
@@ -176,13 +181,16 @@
                 <div>
                   <li>
                     <a
-                      href="https://www.linkedin.com/in/natalia-saidman-29879a242/" class="social-link"
+                      href="https://www.linkedin.com/in/natalia-saidman-29879a242/"
+                      class="social-link"
                     >
                       <i class="fa-brands fa-linkedin-in"></i>Natalia Saidman</a
                     >
                   </li>
                   <li>
-                    <a href="mailto:licnataliasaidman@gmail.com" class="social-link"
+                    <a
+                      href="mailto:licnataliasaidman@gmail.com"
+                      class="social-link"
                       ><i class="fa-solid fa-envelope"></i
                       >licnataliasaidman@gmail.com</a
                     >
@@ -195,19 +203,21 @@
             <h2>Escribime</h2>
             <form action="" method="GET">
               <div class="name">
-                <div>
+                <div class="nombre">
                   <p>Nombre<span>*</span></p>
                   <input
                     type="text"
                     name="nombre"
+                    id="text-name"
                     placeholder="p. ej.: Natalia"
                   />
                 </div>
-                <div>
+                <div class="apellido">
                   <p>Apellido <span>*</span></p>
                   <input
                     type="text"
                     name="apellido"
+                    id="text-name"
                     placeholder="p. ej.: Saidman"
                   />
                   <p></p>
@@ -218,6 +228,7 @@
                 type="text"
                 name="email"
                 id="email"
+                required
                 placeholder="p. ej.: licnataliasaidman@gmail.com"
               />
 
