--- a/index.html
+++ b/index.html
@@ -52,27 +52,27 @@
           </p>
         </div>
         <div class="knowledge">
-          <div class="icon">
+          <div class="skill">
             <i class="devicon-html5-plain colored"></i>
             <p>HTML 5</p>
           </div>
-          <div class="icon">
+          <div class="skill">
             <i class="devicon-css3-plain colored"></i>
             <p>CSS 3</p>
           </div>
-          <div class="icon">
+          <div class="skill">
             <i class="devicon-sass-original colored"></i>
             <p>Sass</p>
           </div>
-          <div class="icon">
+          <div class="skill">
             <i class="devicon-javascript-plain colored"></i>
             <p>JavasScript</p>
           </div>
-          <div class="icon">
+          <div class="skill">
             <i class="devicon-react-original colored"></i>
             <p>React</p>
           </div>
-          <div class="icon">
+          <div class="skill">
             <i class="devicon-git-plain colored"></i>
             <p>GIT</p>
           </div>
@@ -80,7 +80,7 @@
       </section>
 
       <section class="gif">
-        <div class="cite">
+        <div class="phrase">
           <p>
             "He aprendido a arriesgarme a hacer cosas nuevas. El crecimiento y
             la comodidad no pueden coexistir"
