--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
       <section class="gif">
         <div class="phrase">
+          <div id="lamp">🔥</div>
           <p>
             "He aprendido a arriesgarme a hacer cosas nuevas. El crecimiento y
             la comodidad no pueden coexistir"
