portfolio últimos detalles

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
     </header>
     <main>
       <section class="hero" id="holaID">
-        <div class="presentation">
-          <h2>¡Hola! Soy</h2>
-          <h1>Natalia Saidman</h1>
-          <p>Desarrolladora, Lic. en Nutrición y fan de los juegos de mesa</p>
-          <a href="#proyectosID" class="button">LO QUE HAGO</a>
-        </div>
-        <figure>
-          <img src="Imágenes/hero.jpeg" alt="mujer programando" />
-        </figure>
+          <div class="presentation">
+            <h2>¡Hola! Soy</h2>
+            <h1>Natalia Saidman</h1>
+            <p>Desarrolladora, Lic. en Nutrición y fan de los juegos de mesa</p>
+            <a href="#proyectosID" class="button">LO QUE HAGO</a>
+          </div>
+          <figure>
+            <img src="Imágenes/hero.jpeg" alt="mujer programando" />
+          </figure>
       </section>
 
       <section class="section-knowledge" id="conocimientosID">
@@ -47,8 +47,7 @@
           <h2>Mis conocimientos</h2>
           <p>
             Lo que más me gusta de la programación es dar soluciones a los
-            problemas que se puedan presentar. Mis habilidades Hard en
-            programación son las siguientes.
+            problemas que se puedan presentar. Estas son mis habilidades Hard.
           </p>
         </div>
         <div class="knowledge">
@@ -108,11 +107,11 @@
         </div>
         <div class="projects">
           <a href="#">
-              <img
-                src="Imágenes/imagenes verdes/programadora.svg"
-                alt="mujer programando"
-              />
-              <figcaption>Portfolio</figcaption>
+            <img
+              src="Imágenes/imagenes verdes/programadora.svg"
+              alt="mujer programando"
+            />
+            <figcaption>Portfolio</figcaption>
           </a>
           <a href="#">
             <img src="Imágenes/imagenes verdes/memes.svg" alt="mujeres memes" />
@@ -153,13 +152,11 @@
       <section class="section-contact" id="contactoID">
         <div class="box-contact">
           <div class="contact">
-            <div class="contact-title">
               <h2>Contactame</h2>
               <p>
-                Para conocerme más y ponerte en contacto conmigo te comparto mis
+                Para conocerme más y ponerse en contacto conmigo, me encuentran a través de mis
                 redes sociales.
               </p>
-            </div>
             <div class="social-networks">
               <ul>
                 <div>
